2005-06-05  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* poe-xemacs.el: Load `timer' even if `timer-funcs' exists.

2005-05-10  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* poe.el (split-string): Import from Emacs 22. Add omit-nulls
	argument.

2005-05-03  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* poem.el (characterp): Use `char-valid-p' if it exists.
	* poem.el (char-or-char-int-p): Ditto.

2005-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poe-xemacs.el (run-at-time): Attempt to load `timer-funcs'
	before `timer'.

2004-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* README.en, README.ja (CVS): Remove the description about
	developers' pserver access.

2004-02-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* calist.el (use-calist-package): Add missing arg to `format'.

2004-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile: Make `elc' into the default entry.

2004-01-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poe-xemacs.el (run-at-time): Don't use `defadvice' in order to
	avoid a conflict with the Gnus version.

2003-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poe-xemacs.el (run-at-time): Fully implement it for the recent
	XEmacsen when the fsf-compat package is not available.
	(run-at-time-tick-tock): Check closely whether a bug is in
	`start-itimer'.

2003-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poe-xemacs.el (run-at-time): Redefine it to make it punctual.

2003-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* poem-xm.el (char-length): Don't use `defun-maybe' to define it
	since this module may be installed as the XEmacs package which
	should be usable by all the XEmacs 21.x series.


2003-07-05  Yuuichi Teranishi  <teranisi@gohome.org>

	* APEL: Version 10.6 released.
	* apel-ver.el (apel-ver): Change APEL version to 10.6.

2003-07-03  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (make-temp-file) [2-args make-temp-file]:
	Don't use octal number for file modes.

	* poe.el (toplevel): Fixed the compile-time check for the definition of